--- a/src/MovieView/MovieView.scss
+++ b/src/MovieView/MovieView.scss
@@ -1,5 +1,20 @@
 @import '../variables';
 
+.movie-page h1 {
+    margin-bottom: 0;
+}
+
+.movie-page p {
+    width: 60%;
+    margin-top: 0;
+    font-weight: 700;
+}
+
+.movie-page li {
+    width: 40%;
+    margin: 0 5%;
+}
+
 .movie-page {
     display: flex;
     flex-direction: column;
@@ -23,6 +38,7 @@
     width: 100%;
     margin-bottom: 5%;
     font-size: 1.5em;
+    flex-wrap: wrap;
 }
 
 .movie-page h1 {
