--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -37,3 +37,11 @@
   flex-direction: column;
   justify-content: center;
 }
+
+@media only screen and (max-width: 900px){
+  .nav-bar {
+ 
+  height: 20vh;
+ 
+  }
+}
