--- a/src/MovieView/MovieView.scss
+++ b/src/MovieView/MovieView.scss
@@ -50,3 +50,26 @@
     border-style: none;
     padding-bottom: 40px;
 }
+
+@media only screen and (max-width: 900px){
+    .movie-trailer {
+        width: 500px;
+        height: 285px;
+    }
+
+    .movie-page li {
+        font-size: small;
+    }
+}
+@media only screen and (max-width: 600px){
+    .movie-page h1 {
+        font-size: 2em;
+    }
+    .movie-page p {
+        font-size: small;
+    }
+    .movie-trailer {
+        width: 350px;
+        height: 200px;
+    }
+}
