--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,17 +1,28 @@
 @import '../variables';
 
+p, h1 {
+  margin-left: 10%;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+p {
+  font-size: 1.25em;
+}
 
 .nav-bar {
   background-color: $light-blue;
-  height: 15vh;
   display: flex;
   justify-content: space-around;
 }
 
 .home-btn {
-  margin: 2%;
-  height: 46px;
-  width: 100px;
+  font-size: 1.25em;
+  margin: 10%;
+  height: 60px;
+  width: 125px;
   background-color: $dark-white;
   color: $dark-blue;
   border-radius: 3px solid transparent;
@@ -29,17 +40,34 @@
 .nav-title {
   display: flex;
   flex-direction: column;
+  width: 50%;
 }
 
 .btn-container {
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 @media only screen and (max-width: 900px){
   .nav-bar {
-  height: 20vh;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  p {
+    margin-top: 0;
+    font-size: 1em;
+  }
+
+  h1 {
+    font-size: 1.5em;
+  }
+
+  .home-btn {
+    font-size: 1em;
+    width: 100px;
+    height: 50px;
   }
 }
