fix widths on movieView

--- a/src/MovieView/MovieView.scss
+++ b/src/MovieView/MovieView.scss
@@ -2,11 +2,11 @@
 
 .movie-page h1 {
     margin-bottom: 0;
+    margin-left: 0
 }
 
 .movie-page p {
     width: 60%;
-    margin-top: 0;
     font-weight: 700;
 }
 
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 5%;
+    margin: 5% 20%;
     color: $dark-blue;
     align-items: center;
     background-color: $dark-white;
@@ -48,34 +48,57 @@
 .movie-trailer {
     border-style: none;
     padding-bottom: 5%;
+    width: 750px;
+    height: 425px;
+}
+
+@media only screen and (max-width: 1400px) {
+    .movie-trailer {
+        width: 600px;
+        height: 350px;
+    }
 }
 
 @media only screen and (max-width: 1200px) {
     .movie-trailer {
-        width: 700px;
-        height: 400px;
+        width: 500px;
+        height: 285px;
     }
 }
 
 @media only screen and (max-width: 900px){
-    .movie-trailer {
-        width: 500px;
-        height: 285px;
-    }
-
     .movie-page li {
         font-size: small;
     }
+
+    .movie-page p {
+        margin-top: 5%;
+    }
+
+    .movie-page {
+        margin: 5% 10%;
+    }
 }
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 700px){
     .movie-page h1 {
         font-size: 2em;
     }
     .movie-page p {
         font-size: small;
     }
+}
+
+@media only screen and (max-width: 700px) {
     .movie-trailer {
-        width: 350px;
-        height: 200px;
+        width: 300px;
+        height: 175px;
+    }
+}
+
+
+@media only screen and (max-width: 400px) {
+    .movie-trailer {
+        width: 250px;
+        height: 150px;
     }
 }
