add new color styling

--- a/src/MovieView/MovieView.scss
+++ b/src/MovieView/MovieView.scss
@@ -20,9 +20,9 @@
     flex-direction: column;
     justify-content: center;
     margin: 5% 20%;
-    color: $dark-blue;
+    color: $forest;
     align-items: center;
-    background-color: $dark-white;
+    background-color: $light-green;
     box-shadow: 7px 9px black;
     border-radius: 5px;
 }
