--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,3 +2,8 @@ $light-white: #f4f4f2;
 $dark-white: #e8e8e8;
 $light-blue: #bbbfca;
 $dark-blue: #495464;
+
+$forest: #184d47;
+$pickle: #96bb7c;
+$light-green: #d6efc7;
+$gold: #eebb4d;
