--- a/src/Movies/Movies.scss
+++ b/src/Movies/Movies.scss
@@ -5,10 +5,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: $dark-blue;
-}
-
-@media only screen and (max-width: 900px){
-  
+  background-color: $forest;
 }
   
