--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: $dark-blue;
+  background-color: $forest;
 }
 
 code {
