--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   margin: 10% 4% 0 4%;
-  color: $light-white;
+  color: $light-green;
   align-items: center;
   width: 15%;
   cursor: pointer;
