--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -1,12 +1,11 @@
 @import '../variables';
+@import '../mixins.scss';
 
 .movie-card {
   margin-top: 2%;
-  display: flex;
-  flex-direction: column;
+  @include flex-column-center;
   margin: 10% 4% 0 4%;
   color: $light-green;
-  align-items: center;
   width: 15%;
   cursor: pointer;
 }
@@ -17,6 +16,10 @@
   text-align: center;
 }
 
+// .movie-card h2:hover, .movie-card p:hover {
+//   color: $pickle;
+// }
+
 .movie-img {
   width: 100%;
   box-shadow: 4px 5px 4px 1px black;
@@ -25,6 +28,10 @@
 
 .movie-card:hover {
   transform: scale(1.1);
+}
+
+.movie-card:hover p, .movie-card:hover h2 {
+  color: $gold;
 }
 
 @media only screen and (max-width: 1300px) {
