create conditional for loading and wrong movie

--- a/src/MovieView/MovieView.scss
+++ b/src/MovieView/MovieView.scss
@@ -56,6 +56,10 @@
     height: 425px;
 }
 
+.loading-message {
+    color: $gold;
+}
+
 @media only screen and (max-width: 1400px) {
     .movie-trailer {
         width: 600px;
