add message for router error.

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,4 +1,10 @@
+@import '../variables.scss';
+
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
+}
+
+.error-message {
+  color: $gold;
 }
