--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,6 @@
 $white: #f4f4f2;
 $forest: #184d47;
-$pickle: #96bb7c;
-$light-green: #d6efc7;
+$pickle: #77b491;;
+$light-green: #d7e7cd;
 $gold: #eebb4d;
 
