--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,7 +1,14 @@
 @import '../variables';
 
 h3, h1 {
+  // margin-left: 10%;
+}
+
+.nav-bar h3 {
+  color: $forest;
+  color: #184d47;
   margin-left: 10%;
+  margin-right: 10%;
 }
 
 h1 {
@@ -18,14 +25,14 @@ h1 {
 .home-link {
   width: 366px;
   text-decoration: none;
-  display: inline-block; 
+  display: inline-block;
   margin: 1em;
-  background-image: linear-gradient($forest, $forest ), linear-gradient(transparent, transparent);
+  background-image: linear-gradient(#184d47, #184d47), linear-gradient(transparent, transparent);
   background-size: 0 5px, auto;
   background-repeat: no-repeat;
   background-position: center bottom;
   transition: all .2s ease-out;
-  margin: 30px 65px 57px;
+  text-align: -webkit-center;
 }
 
 .home-link:hover {
@@ -35,6 +42,7 @@ h1 {
 .nav-bar {
   background-color: $pickle;
   display: flex;
+  flex-direction: column;
 }
 
 .home-btn {
@@ -52,8 +60,9 @@ h1 {
 
 .nav-title {
   display: flex;
-  flex-direction: column;
-  width: 70%;
+  place-items: center;
+  flex-direction: row;
+  justify-content: space-around;
   text-decoration: none;
 }
 
@@ -66,8 +75,8 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-end;
   margin: 3%;
+  align-items: flex-end;
 }
 
 @media only screen and (max-width: 900px) {
@@ -84,11 +93,33 @@ h1 {
     width: 100px;
     height: 100px;
   }
+
+  .nav-title {
+    align-items: center;
+  }
+
+ 
+
 }
+
 
 @media only screen and (max-width: 600px) {
   .home-btn {
     width: 75px;
     height: 75px;
+  }
+
+  .nav-title {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav-bar h3 {
+    text-align: -webkit-center;
+    color: $forest;
+  }
+
+  .btn-container{
+    align-items: center;
   }
 }
