--- a/src/NavBar/NavBar.scss
+++ b/src/NavBar/NavBar.scss
@@ -1,9 +1,5 @@
 @import '../variables';
 
-h3, h1 {
-  // margin-left: 10%;
-}
-
 .nav-bar h3 {
   color: $forest;
   color: #184d47;
@@ -23,10 +19,10 @@ h1 {
 }
 
 .home-link {
+  margin: 0;
   width: 366px;
   text-decoration: none;
   display: inline-block;
-  margin: 1em;
   background-image: linear-gradient(#184d47, #184d47), linear-gradient(transparent, transparent);
   background-size: 0 5px, auto;
   background-repeat: no-repeat;
@@ -62,8 +58,9 @@ h1 {
   display: flex;
   place-items: center;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   text-decoration: none;
+  margin: 0 10%;
 }
 
 .nav-title h3, h1 {
@@ -85,21 +82,22 @@ h1 {
     font-size: 1em;
   }
 
-  h1 {
-    font-size: 1.5em;
+   .nav-title h1 {
+     font-size: 1.5em;
+   }
+
+   .home-link {
+     text-align: start;
+   }
+
+  .nav-h1 {
+    margin: 0;
   }
 
   .home-btn {
     width: 100px;
     height: 100px;
   }
-
-  .nav-title {
-    align-items: center;
-  }
-
- 
-
 }
 
 
@@ -121,5 +119,9 @@ h1 {
 
   .btn-container{
     align-items: center;
+  }
+
+  .home-link {
+    text-align: -webkit-center;
   }
 }
